# scribble

./: AUTOCOMPLETION.md  Cargo.toml  DEMO.md  DEMO_GUIDE.md  EXTERNAL_EDITOR_GUIDE.md  FEATURE_REQUEST_UNDO.md  INSTALLATION.md  LICENSE  PROJECT_SUMMARY.md  README.md  SEARCH_NAVIGATION.md  TOKYO_NIGHT_THEME.md  create_demo.sh  demo_script.sh
demo_files/: example.py  hello.rs  notes.md
src/: app.rs  autocomplete.rs  events.rs  main.rs  models.rs  preview.rs  search.rs  storage.rs  syntax.rs  theme.rs  ui.rs
