[package]
name = "scribble"
version = "0.1.0"
edition = "2021"
description = "A powerful terminal-based note-taking app with folder organization, markdown support, and syntax highlighting"
authors = ["Seawn"]
license = "MIT"
keywords = ["notes", "markdown", "terminal", "tui", "productivity"]
categories = ["command-line-utilities", "text-editors"]

[[bin]]
name = "scribble"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
syntect = "5.1"
pulldown-cmark = "0.10"
dirs = "5.0"
regex = "1.10"
textwrap = "0.16"
